1. make TMPDIR point to /tmp; 2. fix my help function

--- a/ryang/help/shell.org
+++ b/ryang/help/shell.org
@@ -109,6 +109,7 @@ SELECT rolname FROM pg_roles;
 ** grunt warning:watch ENOSPC
 fix: echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p
 * [[http://www.gnu.org/software/bash/manual/bash.html#Bash-Conditional-Expressions][Bash Reference Manual]]
+  - echo $? last command exit status
 * environment variable
   - unset <env>
 * php
