--- a/ryang/help/shell.org
+++ b/ryang/help/shell.org
@@ -157,3 +157,17 @@ create database <db>
 * find
   - recursively rename files
   find . -name 'productcatalogapi.properties' -exec bash -c 'mv $0 ${0/productcatalogapi.properties}core-services.properties' {} \;
+* docker
+** POSTGRES_PASSWORD= POSTGRES_USER= docker build -t youyougou:0.1.1 .
+** POSTGRES_PASSWORD= POSTGRES_USER= docker run -p 127.0.0.1:5432:5432 --name test youyougou:0.1.1
+** stop all containers
+docker stop $(docker ps -a -q)
+docker rm $(docker ps -a -q)
+** images
+   - docker images
+   - docker rmi <id>
+** docker run
+   - POSTGRES_PASSWORD= POSTGRES_USER= docker run -p 127.0.0.1:5432:5432 --name test2 youyougou:0.1.1
+* Splunk
+** Stats on a load of a specific URL
+index="idnex-name" "validate_security" | bucket _time span=1m | stats count by sourcetype,_time
